--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Run tests
         run: bundle exec rspec
+        env:
+          REDIS_URL: redis://localhost:6379/0
 
       - name: Run RuboCop
         run: bundle exec rubocop 
